--- a/style.css
+++ b/style.css
@@ -105,18 +105,21 @@ body {
   flex-direction: grid;
   grid-template-columns: repeat(2, 1fr);
   align-items: flex-end;
-  gap: 10px;
+  gap: 0px;
 }
 
 .hero-images img {
+  height: 70%;
   width: 220px;
   border-radius: 15px;
+  margin: 2px;
   box-shadow: 0px 4px 6px rgba(0,0,0,0.2);
 }
 
 .hero-images .caption {
   margin-top: 10px;
-  font-size: 14px;
+  padding-top: 10px;
+  font-size: 25px;
   color: #fff;
 }
 
